service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-micro
spec:
  type: LoadBalancer
  selector:
    app: microuimicrotask
  ports:
  - port: 80
    targetPort: 80
