ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  # annotations:
  #   kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: todo-ui.pawankumar.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-micro
            port: 
              number: 80
